# open_ai_chat_gpt3

./: .gitignore  Cargo.toml  README.md
src/: get_models.rs  main.rs  model_example_data.rs
