[package]
name = "open_ai_chat_gpt3"
version = "0.1.0"
authors = ["Worik Stanton <root@worik.org>"]
edition='2021'

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"


